start of prj4_exp13

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 Cooperative_project/prj3_exp10/mycpu_env/soc_verify/
 Cooperative_project/prj3_exp11/mycpu_env/soc_verify/
 Cooperative_project/prj4_exp12/mycpu_env/soc_verify/
+Cooperative_project/prj4_exp13/mycpu_env/soc_verify/
