--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,2 @@
-Cooperative_project/prj3_exp10/mycpu_env/soc_verify/
-Cooperative_project/prj3_exp11/mycpu_env/soc_verify/
-Cooperative_project/prj4_exp12/mycpu_env/soc_verify/
-Cooperative_project/prj4_exp13/mycpu_env/soc_verify/
-Cooperative_project/prj5_exp14/mycpu_env/soc_verify/
-Cooperative_project/prj5_exp15/mycpu_env/soc_verify/
-Cooperative_project/prj5_exp16/mycpu_env/soc_verify/
-Cooperative_project/prj6_exp17/run_vivado
+soc_verify
+tlb_verify
